Add tranisition effects in skills section

--- a/cv.html
+++ b/cv.html
@@ -59,18 +59,55 @@
           <li>MERN Stack web development</li>
         </ul>
         <h3 class="right-section-heading">Skills</h3>
-        <ul class="list">
-          <li><h4>Technical skills</h4></li>
-          <li>programming languages</li>
-          <li>Frameworks/Tools</li>
-          <li>Web</li>
-          <li>Softwares/platforms</li>
-          <li><h4>soft skills</h4></li>
-          <li>Public speaking</li>
-          <li>Leadership</li>
-          <li>Time managment</li>
-          <li>Problem solving</li>
-        </ul>
+<ul class="list">
+  <li>
+    <input type="checkbox" id="programming-skills-toggle" class="toggle-checkbox" />
+    <label for="programming-skills-toggle" class="toggle-label">Programming Languages</label>
+    <ul class="sub-skills">
+      <li>C++</li>
+      <li>Java</li>
+      <li>Python</li>
+      <li>JavaScript</li>
+    </ul>
+  </li>
+  <li>
+    <input type="checkbox" id="framework-skills-toggle" class="toggle-checkbox" />
+    <label for="framework-skills-toggle" class="toggle-label">Frameworks/Tools</label>
+    <ul class="sub-skills">
+      <li>Node.js</li>
+      <li>Express.js</li>
+      <li>MongoDB</li>
+      <li>MERN Stack</li>
+    </ul>
+  </li>
+  <li>
+    <input type="checkbox" id="web-skills-toggle" class="toggle-checkbox" />
+    <label for="web-skills-toggle" class="toggle-label">Web</label>
+    <ul class="sub-skills">
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>Tailwind</li>
+      <li>SQL</li>
+    </ul>
+  </li>
+  <li>
+    <input type="checkbox" id="software-skills-toggle" class="toggle-checkbox" />
+    <label for="software-skills-toggle" class="toggle-label">Software/Platforms</label>
+    <ul class="sub-skills">
+      <li>Cisco Packet Tracer</li>
+      <li>WordPress</li>
+    </ul>
+  </li>
+  <li>
+    <input type="checkbox" id="other-skills-toggle" class="toggle-checkbox" />
+    <label for="other-skills-toggle" class="toggle-label">Other</label>
+    <ul class="sub-skills">
+      <li>SEO</li>
+      <li>Social Media Marketing</li>
+    </ul>
+  </li>
+</ul>
+
         <h3 class="right-section-heading">Projects</h3>
         <ul class="list">
           <li>Rent a Vehicle (based on OOP concepts in Java and JavaFX)</li>
