Add a new section of acheivments and make hover effects on every section's heading

--- a/cv.html
+++ b/cv.html
@@ -12,7 +12,7 @@
       <!-- Left Column -->
       <div class="left-column">
         <img src="./Profle.jpg" alt="Profile Picture" class="profile-picture" height="200px" width="200px">
-        <h2 class="right-section-heading">About</h2>
+        <h2 class="clickable-section">About</h2>
         <p class="about-content">I’m enthusiastic software engineering student passionate about building innovative solutions that make a difference. My interest lies in webb,App development .and I’m dedicated to developing software that is both efficient and user friendly.</p>
         <div class="general-info">
           <label class="clickable-section" for="general-info-toggle">General Info</label>
@@ -27,25 +27,35 @@
             <li><a href="mailto:m.qasimtasleemofficial@gmail.com"><i class="fa-solid fa-at"></i>m.qasimtasleemofficial</a></li>
           </ul>
         </div>
-       <h3 class="right-section-heading">Languages</h3>
+       <h3 class="clickable-section">Languages</h3>
        <ul class="list">
         <li>English</li>
         <li>urdu</li>
        </ul>
-        <h3 class="right-section-heading">Hobbies</h3>
+        <h3 class="clickable-section">Hobbies</h3>
         <ul class="list">
           <li>Sport and fitness</li>
           <li>Video gaming</li>
           <li>Coding side projects</li>
           <li>Learning new programming languages</li>
         </ul>
+        <!-- Achievements & Awards Section -->
+
+  <h3 class="clickable-section">Achievements & Awards</h3>
+  <ul class="list">
+    <li>Won TechFusion Hackathon for developing a real-time web application.</li>
+    <li>Awarded Best Student Developer by COMSATS University.</li>
+    <li>Increased online visibility by 50% for 10+ freelance clients through SEO strategies.</li>
+  </ul>
+
+
       </div>
       
 
       <!-- Right Column -->
       <div class="right-column">
         <h1 class="name">Muhammad Qasim Tasleem</h1>
-        <h3 class="right-section-heading">Objective</h3>
+        <h3 class="clickable-section">Objective</h3>
         <p class="objective">
             I am a passionate and enthusiastic individual currently pursuing a degree in software engineering at COMSATS University. With a strong foundation in programming, web development, and database management, I strive to create innovative solutions to real-world problems. My goal is to excel in the tech industry by mastering cutting-edge technologies, contributing to impactful projects, and continuously enhancing my skills to drive organizational success.
         </p>
@@ -70,14 +80,14 @@
             </li>
           </ul>
         </div>
-        <h3 class="right-section-heading">Certification</h3>
+        <h3 class="clickable-section">Certification</h3>
         <ul class="list">
           <li>MERN Stack web development</li>
           <li>Search Engine optimization(SEO)</li>
           <li>Social Media Marketing</li>
           <li>WordPress</li>
         </ul>
-        <h3 class="right-section-heading">Skills</h3>
+        <h3 class="clickable-section">Skills</h3>
 <ul class="list">
   <li>
     <input type="checkbox" id="programming-skills-toggle" class="toggle-checkbox" />
@@ -131,7 +141,7 @@
   </li>
 </ul>
 
-        <h3 class="right-section-heading">Projects</h3>
+        <h3 class="clickable-section">Projects</h3>
         <ul class="list">
           <li>Rent a Vehicle (based on OOP concepts in Java and JavaFX)</li>
           <li>Pharmacy Management System(OOP )</li>
