adjust size of page

--- a/index.html
+++ b/index.html
@@ -106,7 +106,6 @@
       <li>Node.js</li>
       <li>Express.js</li>
       <li>MongoDB</li>
-      <li>MERN Stack</li>
     </ul>
   </li>
   <li>
@@ -133,10 +132,11 @@
   </li>
   <li>
     <input type="checkbox" id="other-skills-toggle" class="toggle-checkbox" />
-    <label for="other-skills-toggle" class="toggle-label">Other</label>
+    <label for="other-skills-toggle" class="toggle-label">soft skills</label>
     <ul class="sub-skills">
       <li>SEO</li>
       <li>Social Media Marketing</li>
+      <li>E-commerce</li>
     </ul>
   </li>
 </ul>
