Add project section in left column

--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
     <li>Increased online visibility by 50% for 10+ freelance clients through SEO strategies.</li>
   </ul>
 
+  <h3 class="clickable-section">Projects</h3>
+  <ul class="list">
+    <li>Rent a Vehicle (based on OOP concepts in Java and JavaFX)</li>
+    <li>Pharmacy Management System(OOP )</li>
+    <li>Online Food Ordering (Database SQL)</li>
+    <li>Portfolio (Web Development)</li>
+    <li>Apna Store.dec (From wordpress for my own E-commerce store)</li>
+  </ul>
 
       </div>
       
@@ -95,7 +103,6 @@
     <ul class="sub-skills">
       <li>C++</li>
       <li>Java</li>
-      <li>Python</li>
       <li>JavaScript</li>
     </ul>
   </li>
@@ -110,13 +117,11 @@
   </li>
   <li>
     <input type="checkbox" id="web-skills-toggle" class="toggle-checkbox" />
-    <label for="web-skills-toggle" class="toggle-label">Web</label>
+    <label for="web-skills-toggle" class="toggle-label">Web Development</label>
     <ul class="sub-skills">
       <li>HTML</li>
       <li>CSS</li>
-      <li>JavaScript</li>
       <li>jquerey</li>
-      <li>Tailwind</li>
       <li>SQL</li>
     </ul>
   </li>
@@ -132,23 +137,24 @@
   </li>
   <li>
     <input type="checkbox" id="other-skills-toggle" class="toggle-checkbox" />
-    <label for="other-skills-toggle" class="toggle-label">soft skills</label>
+    <label for="other-skills-toggle" class="toggle-label">Others</label>
     <ul class="sub-skills">
       <li>SEO</li>
       <li>Social Media Marketing</li>
       <li>E-commerce</li>
     </ul>
   </li>
+     
+  <li>
+    <input type="checkbox" id="soft-skills-toggle" class="toggle-checkbox" />
+    <label for="soft-skills-toggle" class="toggle-label">Soft Skills</label>
+    <ul class="sub-skills">
+      <li>Public speaking</li>
+      <li>Problem solving</li>
+      <li>Leadership</li>
+    </ul>
+  </li>
 </ul>
-
-        <h3 class="clickable-section">Projects</h3>
-        <ul class="list">
-          <li>Rent a Vehicle (based on OOP concepts in Java and JavaFX)</li>
-          <li>Pharmacy Management System(OOP )</li>
-          <li>Online Food Ordering (Database SQL)</li>
-          <li>Portfolio (Web Development)</li>
-          <li>Apna Store.dec (WordPress)</li>
-        </ul>
       </div>
     </div>
   </body>
